fix: [BE] bad request error and validation
