# backend/docs/swagger.json
@@ -164,12 +164,13 @@
     "definitions": {
         "dto.BookRequest": {
             "type": "object",
+            "required": [
+                "author",
+                "title"
+            ],
             "properties": {
                 "author": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "publisher": {
                     "type": "string"
