# backend/internal/book/handler/dto/request.go
@@ -1,9 +1,8 @@
 package dto
 
 type BookRequest struct {
-	ID        int64  `json:"id"`
-	Title     string `json:"title"`
-	Author    string `json:"author"`
+	Title     string `json:"title" binding:"required"`
+	Author    string `json:"author" binding:"required"`
 	Publisher string `json:"publisher"`
 	Year      int    `json:"year"`
 }
